Cosomochat-ui is done

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_OPENAI_API_KEY=sk-proj-ufE4RS2kij7SN6DtJNxET3BlbkFJPGDezSLu1jJxEE7DS7WR
+# Replace with your actual OpenAI API key
+REACT_APP_OPENAI_API_KEY=
